# ctu

./: README.md
1_semester/: README.md
1_semester/Foundations of Web Applications/: README.md
1_semester/ZAL/: README.md
1_semester/ZAL/CV/: 7.py  8.py
1_semester/ZWA/CV/: 10.php  2.html  3.php  4.html
2_semester/: README.md
2_semester/Analysis and Modeling of Software Requirements/: README.md  ukol.eapx
2_semester/DBS/: README.md
2_semester/DBS/cp5/: pom.xml
2_semester/DBS/test/: pom.xml
2_semester/Database Systems/: README.md
2_semester/PJV/: README.md
2_semester/PJV/JavaGame/: pom.xml
2_semester/Programming in Java/: README.md
2_semester/SMP/: ukol.eapx
2_semester/Software Testing/: README.md
2_semester/Software Testing/cv06-pairwise/: Testovaci.xml
2_semester/Software Testing/eshop/: pom.xml
2_semester/Software Testing/homework/: pom.xml
2_semester/Software Testing/selenium-sem/: pom.xml
2_semester/Software Testing/ts1-lab02/: pom.xml
2_semester/Software Testing/ts1-lab03/: pom.xml
2_semester/Software Testing/ts1-lab09/: pom.xml
2_semester/Software Testing/ts1-selenium/: pom.xml
2_semester/TS/cv06-pairwise/: Objednavka-output.csv  Objednavka.xml  Testovaci-output-with-1.csv  Testovaci-output.csv
2_semester/TS/selenium-sem/: pom.xml
2_semester/TS/sem/: pom.xml
2_semester/TS/ts1-lab02/: pom.xml
2_semester/TS/ts1-lab05/: pom.xml
3_semester/Enterprise Architectures/: README.md
3_semester/Object-oriented design and Modeling/: README.md
3_semester/Programming in C C++/: README.md
3_semester/Programming in C C++/homework/hw01/: CMakeLists.txt  telescope.cpp  telescope.hpp  test-helpers.cpp  test-helpers.hpp  tests-arr-01.cpp  tests-arr-02.cpp  tests-arr-03.cpp  tests-arr-04.cpp
3_semester/Programming in C C++/homework/hw01/image/: Ctverec.ppm  Ctverec1.ppm  carina.ppm  carina1.ppm  carina2.ppm  carina3.ppm  carina4.ppm  carina5.ppm  carina_small.ppm  decode1.txt  decode2.txt  decode3.txt  decode4.txt  decode5.txt  decode_carina.txt  decode_carinas.txt  decode_quintet.txt  decode_ring.txt  decode_smacs.txt  dring.ppm  quintet.ppm  smacs.ppm
3_semester/Programming in C C++/homework/hw02/: CMakeLists.txt  crusoe.cpp  crusoe.hpp  tests-crusoe-01.cpp  tests-crusoe-02.cpp  tests-crusoe-03.cpp  tests-helper.cpp  tests-helper.hpp
4_semester/Client applications in JavaScript/: README.md
4_semester/Data Structures and Algorithms/: README.md
4_semester/Design of Software Systems/: README.md
4_semester/Principles of mobile applications/: README.md
5_semester/Distributed Computing/: README.md
5_semester/Management of Software Projects/: README.md
ZA/2/: linewriter.py
ZA/3/: calculator.py
ZA/4/: picalculator.py
ZA/DU/5/: polynom.py
ZWA/CV/: 2.html
(+179 files in other folders)
